--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - master
-      - dev
 
 jobs:
   deploy:
@@ -53,4 +52,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
-          cname: ${{ github.ref == 'refs/heads/master' && 'robonomics.app' || 'dev.robonomics.app' }}
+          cname: 'dev.robonomics.app'
