--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,6 @@ jobs:
       - run: yarn install
       - run: yarn build
         env:
-          VUE_APP_ROBONOMICS_UI_KEY: ${{ vars.VUE_APP_ROBONOMICS_UI_KEY }}
           VUE_APP_GIT_BRANCH: ${{ env.git_branch }}
           VUE_APP_GIT_TAG: ${{ steps.tagger.outputs.tag }}
           VUE_APP_GIT_SHA: ${{ env.git_hash }}
@@ -51,4 +50,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
-          cname: 'dev.robonomics.app'
+          cname: dev.robonomics.app
