--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,42 +1,41 @@
-name: github pages
+name: Github Pages
 
 on:
   push:
-    branches: [ 'master', 'main']
+    branches: ['master']
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: ['20']
+
+    permissions:
+      contents: write
+
     steps:
       - uses: actions/checkout@v4
 
-      - name: Find Tag
-        id: tagger
-        uses: jimschubert/query-tag-action@v1
-        with:
-          include: 'v*'
-
-      - name: Set env
-        run: |
-          echo "git_hash=$(git rev-parse --short "$GITHUB_SHA")" >> "$GITHUB_ENV"
-          echo "git_branch=$(echo ${GITHUB_REF#refs/heads/})" >> "$GITHUB_ENV"
-
-      - name: Setup Node
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
-          node-version: "18.17.0"
-          cache: 'yarn'
+          node-version: ${{ matrix.node-version }}
+          cache: 'yarn'  
 
-      - run: yarn install
-      - run: yarn build
-        env:
-          VUE_APP_GIT_BRANCH: ${{ env.git_branch }}
-          VUE_APP_GIT_TAG: ${{ steps.tagger.outputs.tag }}
-          VUE_APP_GIT_SHA: ${{ env.git_hash }}
+      - name: Install packages
+        run: yarn install 
 
-      - name: Deploy
+      - name: Run yarn build
+        run: yarn build  
+
+      - name: Add .nojekyll file
+        run: touch dist/.nojekyll
+
+      - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v4
         with:
-          github_token: ${{ secrets.GH_PAT || secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           cname: dev.robonomics.app
