Feat: new page for subsciption

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@libp2p/mplex": "^10.0.16",
     "@libp2p/webrtc": "^4.0.20",
     "@libp2p/websockets": "^8.0.16",
-    "@polkadot/api": "^9.14.1",
+    "@polkadot/api": "^16.4.8",
+    "@polkadot/extension-dapp": "^0.62.2",
     "@polkadot/ui-keyring": "^2.11.1",
     "axios": "^1.4.0",
     "core-js": "^3.32.0",
@@ -33,8 +34,8 @@
     "ipfs-smart-gateway": "^1.0.11",
     "libp2p": "^1.2.4",
     "mipd": "^0.0.7",
-    "robonomics-interface": "^0.3.2",
-    "robonomics-ui-vue": "^0.9.7",
+    "robonomics-interface": "0.3.2",
+    "robonomics-ui-vue": "^0.9.8",
     "uuid": "^9.0.1",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5",
@@ -43,25 +44,32 @@
   "devDependencies": {
     "@babel/core": "^7.23.7",
     "@babel/eslint-parser": "^7.23.3",
+    "@babel/plugin-transform-class-static-block": "^7.28.3",
     "@babel/plugin-transform-private-methods": "^7.23.3",
     "@vue/cli-plugin-babel": "^5.0.8",
     "@vue/cli-plugin-eslint": "^5.0.8",
     "@vue/cli-service": "^5.0.8",
     "eslint": "^8.56.0",
     "eslint-plugin-vue": "^9.20.1",
+    "robonomics-api-augment": "^0.2.0",
     "url": "^0.11.3"
   },
   "eslintConfig": {
     "root": true,
     "env": {
-      "node": true
+      "node": true,
+      "browser": true,
+      "es2021": true
     },
     "extends": [
       "plugin:vue/vue3-essential",
       "eslint:recommended"
     ],
     "parserOptions": {
-      "parser": "@babel/eslint-parser"
+      "parser": "@babel/eslint-parser",
+      "ecmaVersion": 2021,
+      "sourceType": "module",
+      "requireConfigFile": false
     },
     "rules": {
       "vue/multi-word-component-names": "warn"
