--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "@libp2p/mplex": "^10.0.16",
     "@libp2p/webrtc": "^4.0.20",
     "@libp2p/websockets": "^8.0.16",
-    "@polkadot/api": "^16.4.8",
-    "@polkadot/extension-dapp": "^0.62.2",
+    "@polkadot/api": "^9.14.1",
     "@polkadot/ui-keyring": "^2.11.1",
     "axios": "^1.4.0",
     "core-js": "^3.32.0",
@@ -34,8 +33,8 @@
     "ipfs-smart-gateway": "^1.0.11",
     "libp2p": "^1.2.4",
     "mipd": "^0.0.7",
-    "robonomics-interface": "0.3.2",
-    "robonomics-ui-vue": "^0.9.8",
+    "robonomics-interface": "^0.3.2",
+    "robonomics-ui-vue": "^0.9.9",
     "uuid": "^9.0.1",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5",
@@ -51,7 +50,6 @@
     "@vue/cli-service": "^5.0.8",
     "eslint": "^8.56.0",
     "eslint-plugin-vue": "^9.20.1",
-    "robonomics-api-augment": "^0.2.0",
     "url": "^0.11.3"
   },
   "eslintConfig": {
